[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14", features = ["full"] }
axum = { version = "0.4", features = ["headers", "multipart"] }
futures = "0.3"
serde_json = "1"
mime_guess = "2"
