[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
axum = { version = "0.5", features = ["headers", "multipart"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
tower-http = { version = "0.2", features = ["trace"] }
